@@ -6,3 +6,4 @@ Revision history for Perl extension Util::H2O.
 0.02	Sat, May 16 2020
 	- added "-class" option
 	- improved docs
+	- fix "redefined" warnings on duplicate @additional_keys
